fix: keep protected book reservations off target paths