@@ -8,10 +8,6 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.attribute.PosixFileAttributeView;
-import java.nio.file.attribute.PosixFilePermission;
-import java.util.Set;
-import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.Test;
 
 /** Verifies exact-path reservations used before protected-book source inspection. */
@@ -19,15 +15,15 @@ class SqliteOwnedDestinationReservationTest
     extends SqliteProtectedBookMaintenanceStoreCoverageTestSupport {
 
   @Test
-  void reservationClaimsTheFinalPathUntilItPublishesTheOwnedStage() throws Exception {
+  void reservationKeepsTheFinalPathAbsentUntilItPublishesTheOwnedStage() throws Exception {
     Path finalPath = tempDirectory.resolve("reservation").resolve("artifact.key");
     writeArtifact("reservation/parent-ready", "ready");
 
     SqliteOwnedStagedArtifact publishedStage;
     try (SqliteOwnedDestinationReservation reservation =
         SqliteOwnedDestinationReservation.reserve(finalPath)) {
-      assertTrue(Files.exists(finalPath));
-      assertThrows(FileAlreadyExistsException.class, () -> Files.createFile(finalPath));
+      assertFalse(Files.exists(finalPath));
+      assertFalse(SqliteOwnedStageRecord.findFor(finalPath).isEmpty());
 
       publishedStage = reservation.createStage(".payload-", ".tmp");
       Files.writeString(publishedStage.stagedPath(), "published");
@@ -44,13 +40,13 @@ class SqliteOwnedDestinationReservationTest
   }
 
   @Test
-  void unconsumedReservationReleasesBothItsClaimAndDurableStageRecord() throws Exception {
+  void unconsumedReservationReleasesItsDurableSidecarWithoutCreatingTheTarget() throws Exception {
     Path finalPath = tempDirectory.resolve("reservation-release").resolve("artifact.key");
     writeArtifact("reservation-release/parent-ready", "ready");
 
     try (SqliteOwnedDestinationReservation ignored =
         SqliteOwnedDestinationReservation.reserve(finalPath)) {
-      assertTrue(Files.exists(finalPath));
+      assertFalse(Files.exists(finalPath));
       assertFalse(SqliteOwnedStageRecord.findFor(finalPath).isEmpty());
     }
 
@@ -59,62 +55,58 @@ class SqliteOwnedDestinationReservationTest
   }
 
   @Test
-  void reservationMarkerRemainsRecoverableFromItsDurableStageRecord() throws Exception {
+  void reservationKeepsOneRecoverableSidecarStageWhileTheTargetStaysAbsent() throws Exception {
     Path finalPath = tempDirectory.resolve("reservation-recovery").resolve("artifact.key");
     writeArtifact("reservation-recovery/parent-ready", "ready");
 
     try (SqliteOwnedDestinationReservation ignored =
         SqliteOwnedDestinationReservation.reserve(finalPath)) {
       SqliteOwnedStageRecord record = SqliteOwnedStageRecord.findFor(finalPath).getFirst();
-      assertTrue(
-          SqliteOwnedDestinationReservation.isReservationMarker(finalPath, record.stagedPath()));
+      assertTrue(Files.isRegularFile(record.stagedPath()));
+      assertFalse(Files.exists(finalPath));
     }
   }
 
   @Test
-  void reservationMarkerRejectsAnAlteredSameLengthClaim() throws Exception {
-    Path finalPath = tempDirectory.resolve("reservation-altered").resolve("artifact.key");
-    writeArtifact("reservation-altered/parent-ready", "ready");
+  void reservationRejectsAnExternalTargetCreatedAfterTheSidecar() throws Exception {
+    Path finalPath = tempDirectory.resolve("reservation-external").resolve("artifact.key");
+    writeArtifact("reservation-external/parent-ready", "ready");
 
-    try (SqliteOwnedDestinationReservation ignored =
+    try (SqliteOwnedDestinationReservation reservation =
+        SqliteOwnedDestinationReservation.reserve(finalPath)) {
+      SqliteOwnedStagedArtifact staged = reservation.createStage(".payload-", ".tmp");
+      Files.writeString(staged.stagedPath(), "staged");
+      Files.writeString(finalPath, "external");
+
+      assertThrows(
+          FileAlreadyExistsException.class,
+          () -> reservation.publishRetainingStage(staged, Files::createLink));
+      staged.discard();
+    }
+    assertEquals("external", Files.readString(finalPath));
+  }
+
+  @Test
+  void reservationRejectsPublicationAfterItsDurableSidecarIsLost() throws Exception {
+    Path finalPath = tempDirectory.resolve("reservation-lost").resolve("artifact.key");
+    writeArtifact("reservation-lost/parent-ready", "ready");
+
+    try (SqliteOwnedDestinationReservation reservation =
         SqliteOwnedDestinationReservation.reserve(finalPath)) {
       SqliteOwnedStageRecord record = SqliteOwnedStageRecord.findFor(finalPath).getFirst();
-      byte[] alteredMarker = Files.readAllBytes(finalPath);
-      alteredMarker[alteredMarker.length - 1] ^= 1;
-      Files.write(finalPath, alteredMarker);
+      SqliteOwnedStagedArtifact staged = reservation.createStage(".payload-", ".tmp");
+      Files.writeString(staged.stagedPath(), "staged");
+      Files.delete(record.stagedPath());
 
-      assertFalse(
-          SqliteOwnedDestinationReservation.isReservationMarker(finalPath, record.stagedPath()));
+      assertThrows(
+          IllegalStateException.class,
+          () -> reservation.publishRetainingStage(staged, Files::createLink));
+      staged.discard();
     }
   }
 
   @Test
-  void reservationMarkerSurfacesUnreadableClaimInspection() throws Exception {
-    Path finalPath = tempDirectory.resolve("reservation-unreadable").resolve("artifact.key");
-    writeArtifact("reservation-unreadable/parent-ready", "ready");
-    Assumptions.assumeTrue(
-        Files.getFileAttributeView(finalPath.getParent(), PosixFileAttributeView.class) != null,
-        "The unreadable-marker probe requires POSIX file permissions.");
-
-    try (SqliteOwnedDestinationReservation ignored =
-        SqliteOwnedDestinationReservation.reserve(finalPath)) {
-      SqliteOwnedStageRecord record = SqliteOwnedStageRecord.findFor(finalPath).getFirst();
-      Set<PosixFilePermission> originalPermissions = Files.getPosixFilePermissions(finalPath);
-      Files.setPosixFilePermissions(finalPath, Set.of());
-      try {
-        assertThrows(
-            IllegalStateException.class,
-            () ->
-                SqliteOwnedDestinationReservation.isReservationMarker(
-                    finalPath, record.stagedPath()));
-      } finally {
-        Files.setPosixFilePermissions(finalPath, originalPermissions);
-      }
-    }
-  }
-
-  @Test
-  void reservationPublishesUnicodeAndLeadingDashTargetsWithoutUsingTheMarkerAsTheStage()
+  void reservationPublishesUnicodeAndLeadingDashTargetsWithoutMaterializingTheTargetEarly()
       throws Exception {
     Path finalPath =
         tempDirectory.resolve("Rīga büro").resolve("-entity backup [windows-smoke].sqlite");
@@ -124,7 +116,8 @@ class SqliteOwnedDestinationReservationTest
     try (SqliteOwnedDestinationReservation reservation =
         SqliteOwnedDestinationReservation.reserve(finalPath)) {
       Path reservationStage = SqliteOwnedStageRecord.findFor(finalPath).getFirst().stagedPath();
-      assertFalse(Files.isSameFile(finalPath, reservationStage));
+      assertTrue(Files.isRegularFile(reservationStage));
+      assertFalse(Files.exists(finalPath));
 
       publishedStage = reservation.createStage(".payload-", ".sqlite");
       Files.writeString(publishedStage.stagedPath(), "published");
